[package]
name = "x7"
version = "0.1.0"
authors = ["David Briggs <david@dpbriggs.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.4.0"
rustyline = "6.2.0"
rand = "0.7.3"
im = "15.0.0"
glob = "0.3.0"
nom = "6.0.0-alpha1"
