[package]
name = "x7"
version = "0.2.0"
authors = ["David Briggs <david@dpbriggs.ca>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Quirky and embeddable lisp"
homepage = "https://github.com/dpbriggs/x7"
readme = "README.org"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "x7"
path = "src/lib.rs"

[[bin]]
name = "x7"
path = "src/main.rs"

[[bench]]
name = "bench"
harness = false

[[example]]
name = "ffi"

[dependencies]
once_cell = "1.4.0"
rustyline = "7.1.0"
rand = "0.7.3"
im = "15.0.0"
glob = "0.3.0"
nom = "6.0.1"
bigdecimal = { git = "https://github.com/dpbriggs/bigdecimal-rs", rev="02ba26b" }
structopt = "0.3.15"
anyhow = "1.0.31"
thiserror = "1.0.20"
itertools = "0.9.0"
parking_lot = "0.11.0"
regex = "1.4.2"
dashmap = "3.11.10"
rustyline-derive = "0.4.0"
num-traits = "0.2.14"

[dev-dependencies]
criterion = "0.3.3"
